--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="benefits">
             <h2>Por que participar?</h2>
             <div class="benefit-grid">
-                <div class="benefit-card">
+                <div class="benefit-card" onclick="window.open('meio-ambiente.html', '_blank')">
                     <span class="icon">🌎</span>
                     <h3>Protege o Meio Ambiente</h3>
                     <p>Ajudando a reciclar, você contribui para um mundo mais limpo.</p>
@@ -37,10 +37,15 @@
                     <h3>Ganhe Prêmios</h3>
                     <p>Troque seus pontos por produtos e descontos na comunidade.</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card" onclick="window.open('ranking.html', '_blank')">
                     <span class="icon">📊</span>
                     <h3>Veja seu Impacto</h3>
                     <p>Acompanhe em tempo real quanto você já reciclou.</p>
+                </div>
+                <div class="benefit-card" onclick="window.open('itens-validos.html', '_blank')">
+                    <span class="icon">💻</span>
+                    <h3>Itens Válidos</h3>
+                    <p>Clique aqui para ver a lista completa de itens eletrônicos aceitos.</p>
                 </div>
             </div>
         </section>
