--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h3>Protege o Meio Ambiente</h3>
                     <p>Ajudando a reciclar, você contribui para um mundo mais limpo.</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card" onclick="window.open('ganhe-premios.html', '_blank')">
                     <span class="icon">🏆</span>
                     <h3>Ganhe Prêmios</h3>
                     <p>Troque seus pontos por produtos e descontos na comunidade.</p>
