--- a/ranking.html
+++ b/ranking.html
@@ -114,7 +114,7 @@
                     <div class="position">1</div>
                     <img src="https://ui-avatars.com/api/?name=Carlos+Silva&background=4CAF50&color=fff&size=60&rounded=true" alt="Carlos Silva" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Carlos Silva</div>
+                        <div class="participant-name">Rodrigo Bergenthal</div>
                         <div class="points">1.250 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 100%"></div>
@@ -127,7 +127,7 @@
                     <div class="position">2</div>
                     <img src="https://ui-avatars.com/api/?name=Ana+Santos&background=2196F3&color=fff&size=60&rounded=true" alt="Ana Santos" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Ana Santos</div>
+                        <div class="participant-name">Gabriela Franca</div>
                         <div class="points">1.180 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 95%"></div>
@@ -140,7 +140,7 @@
                     <div class="position">3</div>
                     <img src="https://ui-avatars.com/api/?name=Pedro+Ferreira&background=F44336&color=fff&size=60&rounded=true" alt="Pedro Ferreira" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Pedro Ferreira</div>
+                        <div class="participant-name">Camily Shultz</div>
                         <div class="points">1.120 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 90%"></div>
@@ -153,7 +153,7 @@
                     <div class="position">4</div>
                     <img src="https://ui-avatars.com/api/?name=Maria+Costa&background=9C27B0&color=fff&size=60&rounded=true" alt="Maria Costa" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Maria Costa</div>
+                        <div class="participant-name">Karina Dutra</div>
                         <div class="points">980 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 80%"></div>
@@ -165,7 +165,7 @@
                     <div class="position">5</div>
                     <img src="https://ui-avatars.com/api/?name=João+Almeida&background=FF9800&color=fff&size=60&rounded=true" alt="João Almeida" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">João Almeida</div>
+                        <div class="participant-name">Roberta Schilling</div>
                         <div class="points">920 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 75%"></div>
@@ -177,7 +177,7 @@
                     <div class="position">6</div>
                     <img src="https://ui-avatars.com/api/?name=Fernanda+Oliveira&background=009688&color=fff&size=60&rounded=true" alt="Fernanda Oliveira" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Fernanda Oliveira</div>
+                        <div class="participant-name">Andrielle Christine</div>
                         <div class="points">870 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 70%"></div>
@@ -189,7 +189,7 @@
                     <div class="position">7</div>
                     <img src="https://ui-avatars.com/api/?name=Lucas+Rodrigues&background=795548&color=fff&size=60&rounded=true" alt="Lucas Rodrigues" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Lucas Rodrigues</div>
+                        <div class="participant-name">Leonardo França</div>
                         <div class="points">820 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 65%"></div>
@@ -201,7 +201,7 @@
                     <div class="position">8</div>
                     <img src="https://ui-avatars.com/api/?name=Juliana+Pereira&background=3F51B5&color=fff&size=60&rounded=true" alt="Juliana Pereira" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Juliana Pereira</div>
+                        <div class="participant-name">Cassius Crivello</div>
                         <div class="points">780 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 62%"></div>
@@ -213,7 +213,7 @@
                     <div class="position">9</div>
                     <img src="https://ui-avatars.com/api/?name=Roberto+Santana&background=2196F3&color=fff&size=60&rounded=true" alt="Roberto Santana" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Roberto Santana</div>
+                        <div class="participant-name">Heregon</div>
                         <div class="points">740 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 60%"></div>
@@ -225,7 +225,7 @@
                     <div class="position">10</div>
                     <img src="https://ui-avatars.com/api/?name=Patricia+Mendes&background=E91E63&color=fff&size=60&rounded=true" alt="Patricia Mendes" class="avatar">
                     <div class="participant-info">
-                        <div class="participant-name">Patricia Mendes</div>
+                        <div class="participant-name">Leonardo Cardoso</div>
                         <div class="points">700 pontos</div>
                         <div class="progress-bar">
                             <div class="progress" style="width: 55%"></div>
