--- a/ganhe-premios.html
+++ b/ganhe-premios.html
@@ -11,6 +11,12 @@
         <h1>🏆 Ganhe Prêmios com a Reciclagem</h1>
         <p>Troque seus pontos por produtos e benefícios na comunidade!</p>
     </header>
+    
+    <div class="back-to-home">
+        <a href="index.html" title="Voltar para a página inicial">
+            <span class="back-arrow">←</span> Início
+        </a>
+    </div>
 
     <main>
         <section class="rewards-section">
