--- a/index.html
+++ b/index.html
@@ -60,11 +60,24 @@
             </ul>
         </section>
 
+        <section class="team">
+            <h2>Equipe Envolvida</h2>
+            <p>Conheça algumas das pessoas que fazem esse projeto acontecer:</p>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="fotos/camily.png" alt="Camily Shultz">
+                    <h3>Camily Shultz</h3>
+                    <p>Gerente de Projeto</p>
+                </div>
+            </div>
+        </section>
+
         <section class="cta">
             <h2>Faça parte dessa mudança!</h2>
             <p>Comece a reciclar hoje mesmo e veja a diferença que você pode fazer.</p>
             <!-- Um botão simples para simular uma ação -->
             <button id="learnMoreBtn">Saiba Mais</button>
+            <p><a href="coleta%20inteligente%20slides.pdf" target="_blank" class="pdf-link">Slides da Apresentação</a></p>
         </section>
     </main>
 
