--- a/itens-validos.html
+++ b/itens-validos.html
@@ -11,6 +11,12 @@
         <h1>♻️ Itens Válidos para Reciclagem</h1>
         <p>Hardware e componentes eletrônicos aceitos em nossos pontos de coleta</p>
     </header>
+    
+    <div class="back-to-home">
+        <a href="index.html" title="Voltar para a página inicial">
+            <span class="back-arrow">←</span> Início
+        </a>
+    </div>
 
     <main>
         <section class="items-description">
