--- a/meio-ambiente.html
+++ b/meio-ambiente.html
@@ -11,6 +11,12 @@
         <h1>🌍 Por que Proteger o Meio Ambiente</h1>
         <p>Benefícios da reciclagem para o nosso planeta</p>
     </header>
+    
+    <div class="back-to-home">
+        <a href="index.html" title="Voltar para a página inicial">
+            <span class="back-arrow">←</span> Início
+        </a>
+    </div>
 
     <main>
         <section class="environment-description">
