--- a/meio-ambiente.html
+++ b/meio-ambiente.html
@@ -11,7 +11,7 @@
         <h1>🌍 Por que Proteger o Meio Ambiente</h1>
         <p>Benefícios da reciclagem para o nosso planeta</p>
     </header>
-    
+
     <div class="back-to-home">
         <a href="index.html" title="Voltar para a página inicial">
             <span class="back-arrow">←</span> Início
@@ -59,5 +59,6 @@
     <footer>
         <p>&copy; 2025 Centro Social Cesmar</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
