Adiciona melhorias de responsividade e animação moderna para o ícone de reciclagem

--- a/ganhe-premios.html
+++ b/ganhe-premios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>🏆 Ganhe Prêmios com a Reciclagem</h1>
+        <h1><span class="recycle-icon animated">🏆</span> Ganhe Prêmios com a Reciclagem</h1>
         <p>Troque seus pontos por produtos e benefícios na comunidade!</p>
     </header>
 
