--- a/itens-validos.html
+++ b/itens-validos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>♻️ Itens Válidos para Reciclagem</h1>
+        <h1><span class="recycle-icon animated">♻️</span> Itens Válidos para Reciclagem</h1>
         <p>Hardware e componentes eletrônicos aceitos em nossos pontos de coleta</p>
     </header>
 
