--- a/meio-ambiente.html
+++ b/meio-ambiente.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>🌍 Por que Proteger o Meio Ambiente</h1>
+        <h1><span class="recycle-icon animated">🌍</span> Por que Proteger o Meio Ambiente</h1>
         <p>Benefícios da reciclagem para o nosso planeta</p>
     </header>
 
