--- a/ranking.html
+++ b/ranking.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <header>
-        <h1>📊 Ranking de Impacto Ambiental</h1>
+        <h1><span class="recycle-icon animated">📊</span> Ranking de Impacto Ambiental</h1>
         <p>Veja como você e outros participantes estão fazendo a diferença!</p>
     </header>
 
