--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>♻️ Ponto de Coleta Inteligente</h1>
+        <h1><span class="recycle-icon animated recycle-main">♻️</span> Ponto de Coleta Inteligente</h1>
         <p>Recicle e ganhe pontos!</p>
     </header>
 
